<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My World</string>

    <!-- Main App -->
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="button_SasukeBox">Sasuke In Box</string>
    <string name="button_QuestionAnswer">Question and Answer</string>
    <string name="button_DragAndDrop">Drag And Drop</string>
    <string name="button_FragmentTest">Fragment Test</string>
    <string name="button_GesturesTest">Gestures Test</string>
    <string name="button_MultiTouchTest">Multitouch Test</string>

    <!-- SasukeBox App -->
    <string name="title_activity_sasuke_box">Sasuke_box</string>
    <string name="putSasukeInBox">Put Sasuke in the Box!</string>
    <string name="sasukeDes">Sasuke</string>
    <string name="boxDes">Box</string>

    <!-- QuestionAnswer App -->
    <string name="title_activity_question_answer">QuestionAnswer</string>
    <string name="Question">What is 1 + 1?</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>

    <!-- DragAndDrop App -->
    <string name="title_activity_drag_and_drop">DragAndDrop</string>
    <string name="intro">Place these foods in your order of preference.</string>
    <string name="option_1">Apple</string>
    <string name="option_2">Cake</string>
    <string name="option_3">Cheese</string>
    <string name="choice_1">Most favorite</string>
    <string name="choice_2">-</string>
    <string name="choice_3">Least favorite</string>

    <!-- Fragments App -->
    <string name="title_activity_switch_screen">Fragment Test</string>
    <string name="button_fragment1_b1">b1</string>
    <string name="button_fragment1_b2">b2</string>

    <!-- Gestures App -->
    <string name="title_activity_gestures">Gestures</string>
    
    <!-- Multitouch App -->
    <string name="title_activity_multi_touch">MultiTouch</string>
    

</resources>