<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp" >
    
    <Button
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startSasukeBox"
        android:text="@string/button_SasukeBox" />
    
    <Button
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startQuestionAnswer"
        android:text="@string/button_QuestionAnswer" />

     <Button
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="startDragAndDrop"
        android:text="@string/button_DragAndDrop" />

     <Button
         android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="startFragments"
         android:text="@string/button_FragmentTest" />

     <Button
         android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="startGestures"
         android:text="@string/button_GesturesTest" />     
         
     <Button
         android:layout_weight="1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="startMultiTouch"
         android:text="@string/button_MultiTouchTest" />
     
</LinearLayout>